--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:layout_width="400dp"
         android:layout_height="48dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         android:background="@android:color/holo_green_light"
         android:onClick="onStartClick"
         android:text="Start"
@@ -23,15 +22,42 @@
         android:id="@+id/stop"
         android:layout_width="400dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
         android:background="@android:color/holo_green_light"
         android:onClick="onStopClick"
         android:text="Stop"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/start"/>
 
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="400dp"
+        android:layout_height="48dp"
+        android:background="@android:color/holo_green_light"
+        android:onClick="onUploadClick"
+        android:text="Upload"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/stop"/>
+
+    <TextView
+        android:id="@+id/uploadMessage"
+        android:layout_width="260dp"
+        android:layout_height="72dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="There are files that waiting to be uploaded"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upload"
+        app:layout_constraintVertical_bias="0.496"/>
 
 </android.support.constraint.ConstraintLayout>
