--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.eyalb.myapplication.MainActivity">
+    android:keepScreenOn="true"
+    tools:context="app.SensoCar.eyalb.myapplication.MainActivity">
 
     <Button
         android:id="@+id/start"
@@ -25,6 +26,7 @@
         android:background="@android:color/holo_green_light"
         android:onClick="onStopClick"
         android:text="Stop"
+        android:enabled="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
@@ -32,14 +34,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="233dp"
-        android:layout_height="34dp"
+        android:layout_width="314dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Your current speed is:"
+        android:text="מהירות נוכחית"
         android:textAlignment="center"
-        android:textSize="36px"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -49,19 +51,81 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="233dp"
-        android:layout_height="36dp"
+        android:layout_width="314dp"
+        android:layout_height="92dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="0.0 km/h"
         android:textAlignment="center"
-        android:textSize="36px"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stop"
         app:layout_constraintVertical_bias="0.504" />
+
+    <LinearLayout
+        android:id="@+id/caution"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView2">
+
+        <ImageView
+            android:id="@+id/cautionImg"
+            android:layout_width="52dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            app:srcCompat="@drawable/caution"
+            tools:ignore="ContentDescription,RtlHardcoded" />
+
+        <TextView
+            android:id="@+id/cautionTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|right"
+            android:padding="10dp"
+            android:text="אנא וודאו כי המכשיר מונח במקום יציב\n והימנעו מלגעת בו במהלך הנסיעה"
+            android:textSize="15sp"
+            tools:ignore="RtlHardcoded" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:visibility="invisible"
+        android:id="@+id/redoForm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/caution">
+
+        <Button
+            android:id="@+id/redoFormBtn"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical|left"
+            android:background="@drawable/red_btn"
+            android:text="לחץ כאן"
+            android:onClick="changeScreens"
+            tools:ignore="ContentDescription,RtlHardcoded" />
+
+        <TextView
+            android:id="@+id/redoFormText"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|right"
+            android:padding="10dp"
+            android:text="עקב תקלה בשרת נשמח אם תוכל למלא שוב את השאלון הראשוני"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            tools:ignore="RtlHardcoded" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
